--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,7 @@ steps:
 images:
 - 'gcr.io/$PROJECT_ID/complaint-processor:$COMMIT_SHA'
 options:
-  logging: CLOUD_LOGGING_ONLY # Optional, but recommended to avoid duplicate logs
+  logging: CLOUD_LOGGING_ONLY 
+    cloudLogging: CLOUD_LOGGING_ONLY
+    gcsLogsBucket: 'gs://complaint-system-log-bucket' 
   serviceAccount: 'complain-system-service@project1-173415.iam.gserviceaccount.com' # Replace with your service account
-  logsBucket: 'gs://complaint-system-log-bucket' # Replace with your bucket name
