--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,5 @@ steps:
 images:
 - 'gcr.io/$PROJECT_ID/complaint-processor:$COMMIT_SHA'
 options:
-  logging:
-    cloudLogging: 'CLOUD_LOGGING_ONLY' 
-    gcsLogsBucket: 'gs://complaint-system-log-bucket'
-  serviceAccount: 'complain-system-service@project1-173415.iam.gserviceaccount.com'
+  gcsLogsBucket: 'gs://complaint-system-log-bucket' # Replace with YOUR bucket name!
+  serviceAccount: 'complain-system-service@project1-173415.iam.gserviceaccount.com' # Replace with YOUR service account
