--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-requests
-msal
-transformers
-loguru
+requests>=2.31.0
+msal>=1.24.0
+loguru>=0.7.2
+jsonschema>=4.20.0
+transformers>=4.35.2
+scikit-learn>=1.3.2
